[package]
name = "job-centre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
tokio-util = "*"
log = "*"
flexi_logger = "*"
thiserror = "*"
uuid = { version = "*", features = ["v4"] }
serde = "*"
serde_json = "*"
rand = "*"
sorted-vec = "*"
